--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../bombo/Css/styles.css" />
+    <link rel="stylesheet" href="../VIC BOMBO/Css/styles.css" />
     <link rel="stylesheet" media="screen and (max-width: 400px)" href="">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-        <img src="../bombo/Img/logo.png">
+        <img src="../VIC BOMBO/Img/logo.png">
         <nav>
           <ul>
             <li>
