--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../VIC BOMBO/Css/styles.css" />
-    <link rel="stylesheet" media="screen and (max-width: 400px)" href="">
+    <link rel="stylesheet" href="Css/styles.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100&display=swap" rel="stylesheet">
     <title>Hit the Domboom</title>
@@ -13,7 +9,7 @@
 
   <body>
     <header>
-        <img src="../VIC BOMBO/Img/logo.png">
+        <img src="Img/logo.png">
         <nav>
           <ul>
             <li>
@@ -32,13 +28,22 @@
             <a class= "log in" href="">Log in</a>
             </li>
           </ul>
+        </nav>
     </header>
 
     <main class="mid">
+      <div class="leftmain">
       <h1>Music for<br>everyone.</h1>
       <h2>Millions of songs. No credit card needed</h2>
       <button>Hit the</button>
-      <img src="../bombo/Img/drumkitpng">
+      </div>
+      <div class="rightmain">
+        <img src="Img/drumkit.png">
+       
+        <button class="btn-pad pad-xl  pad1">bombo1</button>
+        <button class="btn-pad pad-sm pad2">bombo1</button>
+    
+      </div>
     </main>
 
     <footer>
