restructuración general archivos css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="Css/styles.css"/>
+    <link rel="stylesheet" href="./Css/header-style.css"/>
+    <link rel="stylesheet" href="./Css/main-style.css"/>
+    <link rel="stylesheet" href="./Css/footer-style.css"/>
+    <link rel="stylesheet" href="./Css/general-style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100&display=swap" rel="stylesheet">
     <title>hit bombo</title>
@@ -9,7 +12,7 @@
 
   <body>
     <header>
-        <img src="Img/logo.png">
+        <img src="Images/logo.png">
         <nav>
           <ul>
             <li>
@@ -31,17 +34,17 @@
         </nav>
     </header>
 
-    <main class="mid">
+    <main>
       <div class="leftmain">
       <h1>Music for<br>everyone.</h1>
       <h2>Millions of songs. No credit card needed</h2>
       <button>Hit the</button>
       </div>
       <div class="rightmain">
-        <img src="Img/drumkit.png">
+        <img src="Images/drumkit.png">
        
-        <button class="btn-pad pad-xl  pad1">bombo1</button>
-        <button class="btn-pad pad-sm pad2">bombo1</button>
+        <button class="btn-pad pad-xl  pad1"></button>
+        <button class="btn-pad pad-sm pad2"></button>
     
       </div>
     </main>
