--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./Css/general-style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100&display=swap" rel="stylesheet">
-    <title>hit bombo</title>
+    <title>Hit The Bombo</title>
   </head>
 
   <body>
@@ -51,7 +51,7 @@
 
     <footer>
       <h1>Try Premium free for 1 month.</h1>
-      <h2>Play millions of songs add-free, on-demand, and offline.
+      <h2>Play millions of songs add-free, on-demand, and offline.</h2>
       <button>SEE PRINCING</button>
     </footer>
   </body>
