--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./Css/header-style.css"/>
-    <link rel="stylesheet" href="./Css/main-style.css"/>
-    <link rel="stylesheet" href="./Css/footer-style.css"/>
-    <link rel="stylesheet" href="./Css/general-style.css"/>
+    <link rel="stylesheet" media="screen and (min-width: 600px)" href="./Css/Desktop/general-style.css"/>
+    <link rel="stylesheet" media="screen and (max-width: 500px)" href="./Css/mobile-style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100&display=swap" rel="stylesheet">
     <title>Hit The Bombo</title>
