--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" media="screen and (min-width: 600px)" href="./Css/Desktop/general-style.css"/>
-    <link rel="stylesheet" media="screen and (max-width: 500px)" href="./Css/mobile-style.css"/>
+    
+    <title>Hit The Bombo</title>
+    <link rel="stylesheet" href="./css/desktop/general-style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100&display=swap" rel="stylesheet">
-    <title>Hit The Bombo</title>
   </head>
 
   <body>
@@ -52,5 +52,6 @@
       <h2>Play millions of songs add-free, on-demand, and offline.</h2>
       <button>SEE PRINCING</button>
     </footer>
+
   </body>
 </html>
