rehacer-función - eliminado outline y nombres

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
       <div class="rightmain">
         <img src="Images/drumkit.png">
-        <button class="btn-pad pad-xl pad1" onclick="play1()">drum1</button>
-        <button class="btn-pad pad-xl pad2" onclick="play2()">drum2</button>
-        <button class="btn-pad pad-xl pad3" onclick="play3()">drum3</button>
-        <button class="btn-pad pad-xl pad4" onclick="play4()">drum4</button>
-        <button class="btn-pad pad-xl pad5" onclick="play5()">drum5</button>
-        <button class="btn-pad pad-sm pad6" onclick="play6()">drum6</button>
-        <button class="btn-pad pad-sm pad7" onclick="play7()">drum7</button>
-        <button class="btn-pad pad-sm pad8" onclick="play8()">drum8</button>
+        <button class="btn-pad pad-xl pad1" onclick="play()"></button>
+        <button class="btn-pad pad-xl pad2" onclick="play()"></button>
+        <button class="btn-pad pad-xl pad3" onclick="play3()"></button>
+        <button class="btn-pad pad-xl pad4" onclick="play4()"></button>
+        <button class="btn-pad pad-xl pad5" onclick="play5()"></button>
+        <button class="btn-pad pad-sm pad6" onclick="play6()"></button>
+        <button class="btn-pad pad-sm pad7" onclick="play7()"></button>
+        <button class="btn-pad pad-sm pad8" onclick="play8()"></button>
       </div>
     </main>
 
