--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
       <div class="rightmain">
         <img src="Images/drumkit.png">
-        <button class="btn-pad pad-xl pad1" onclick="play()"></button>
-        <button class="btn-pad pad-xl pad2" onclick="play()"></button>
+        <button class="btn-pad pad-xl pad1" onclick="play1()"></button>
+        <button class="btn-pad pad-xl pad2" onclick="play2()"></button>
         <button class="btn-pad pad-xl pad3" onclick="play3()"></button>
         <button class="btn-pad pad-xl pad4" onclick="play4()"></button>
         <button class="btn-pad pad-xl pad5" onclick="play5()"></button>
